fixed customized overflow

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -44,7 +44,7 @@
   }
 
   main {
-    overflow: visible;
+    overflow: none;
 
     .container {
       position: relative;
